--- a/Tableau-de-synthèse.html
+++ b/Tableau-de-synthèse.html
@@ -92,14 +92,12 @@
                     <span class="material-symbols-outlined">menu</span>
                 </button>
                 <!-- Logo avec lien vers l'accueil -->
-                <a href="/" class="header-logo">
+                <a href="Hub.html" class="header-logo">
                     <img src="img/portfolio-logo.png">
                 </a>
                 <!-- Menu de navigation secondaire -->
-                <div class="header-menu">
-                    <li><a href="Hub.html">Hub</a></li>
-                    <a href="veille technologique.html">veille</a>
-                </div>                   
+                 
+                <a href="veille technologique.html" style="justify-content: center">veille</a>                  
             </div>
         </div>
     </body>
