portfolio presque fini

--- a/Hub.html
+++ b/Hub.html
@@ -26,7 +26,7 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="/" class="header-logo">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="header-logo">
                         <img src="img/portfolio-logo.png">
                     </a>
                     <!-- Menu de navigation principal -->
@@ -72,13 +72,17 @@
                 <h2>Découvrez mes compétence</h2>
                 <div class="flex toColumn gap20" style="justify-content: center">
                     <div class="w25 wm100 skill">
-                        <img src="img/html-logo.png">
-                        <h3>SLAM</h3>                                                 
+                        <a href="SLAM.html">
+                            <img src="img/SLAM-logo.png">
+                            
+                        </a>                                                 
                     </div>
                     <div class="w25 wm100 skill">
-                        <img src="img/css-logo.png">
-                        <h3>SISR</h3>                                                 
-                    </div>                   
+                        <a href="SISR.html">
+                            <img src="img/SISR-logo.png">
+                            
+                        </a>                                                  
+                    </div>                  
                 </div>                      
             </div>
         </div>
