--- a/SISR.html
+++ b/SISR.html
@@ -7,7 +7,7 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>Veille technologique</title>
+        <title>SISR</title>
         <!-- Balise de description pour le SEO -->
         <meta type="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
@@ -32,7 +32,7 @@
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
                         <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#veille-technologique">Veille technologique</a></li>
+                        <li><a href="#Competences">Compétences</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -48,17 +48,43 @@
             </div>
         </div>
 
-        <!-- Section 'Réalisations' avec projets sous forme de cartes -->
-        <div id="veille-technologique" class="section">
-            <div class="boxed text-center">
-                <h2>Ma veille technologique</h2>
-                <div class="flex" style="justify-content: center">
-                    <div class="w60 wm100">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in volutpat leo. In rhoncus feugiat facilisis. Sed convallis, lectus vel ultricies ornare, sapien ante placerat metus, sed consectetur massa nunc non tellus. Mauris eget magna at lacus rhoncus convallis. Duis ac facilisis dolor, at euismod lacus. Nulla facilisi. Donec metus ante, pretium sit amet justo ac, rutrum vulputate ipsum. Donec metus ex, suscipit vestibulum rutrum dignissim, elementum sit amet tortor.</p>
-                    </div>
+        <!-- Section 'Compétences' avec cartes pour chaque compétence -->
+        <div id="Competences" class="section">
+             <div class="boxed text-center">
+                <h2>Mes compétences en SLAM</h2>
+                <div class="competences-cards">
+                    <div class="competence-card">
+                    <h3>Langages</h3>
+                    <p>HTML/CSS, PHP, bases de JAVA, Python et C</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Bases de données</h3>
+                    <p>MySql et langage SQL</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Systèmes d’exploitations</h3>
+                    <p>Windows Client/Serveur,Linux Client/Serveur, Domaine AD, DHCP, DNS</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Notions de Gestions de Parcs </h3>
+                    <p>Gestion d’Incidents ,Client/Serveur routeurs, Commutateurs, Vlan</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Réseaux</h3>
+                    <p>TCP-IP, DHCP, HTTP, Modèle OSI</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Cybersécurité</h3>
+                    <p>RGPD, CNIL, 12 règles de sécurité pour PME</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Packet Tracer</h3>
+                    <p>Maquettage infrastructure</p>
                 </div>
             </div>
         </div>
+    </div>
+
 
 
         <!-- Section de contact avec informations et icônes -->
@@ -87,7 +113,6 @@
         
         <div class="navigation-buttons">
             <button onclick="location.href='Hub.html'">Page 1</button>
-            <button onclick="location.href='Tableau-de-synthèse.html'">Page 2</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
