--- a/Hub.html
+++ b/Hub.html
@@ -8,13 +8,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
         <title>Mon portfolio</title>
+        <!-- icon de la page -->
+        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
-        <meta type="description" content="Ceci est mon portfolio étudiant" />
+        <meta name="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <!-- Lien vers la feuille de style CSS du portfolio -->
-        <link rel="stylesheet" href="styles/styles.css" types="text/css">
+        <link rel="stylesheet" href="styles/styles.css" type="text/css">
     </head>
+
 
     <body>
         <!-- En-tête de la page avec le logo et le menu de navigation -->
@@ -60,7 +63,7 @@
                         <h2>A propos de moi</h2>                        
                     </div>
                     <div class="w60 wm100">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in volutpat leo. In rhoncus feugiat facilisis. Sed convallis, lectus vel ultricies ornare, sapien ante placerat metus, sed consectetur massa nunc non tellus. Mauris eget magna at lacus rhoncus convallis. Duis ac facilisis dolor, at euismod lacus. Nulla facilisi. Donec metus ante, pretium sit amet justo ac, rutrum vulputate ipsum. Donec metus ex, suscipit vestibulum rutrum dignissim, elementum sit amet tortor.</p>
+                        <p>Étudiant en BTS Services Informatiques aux Organisations (SIO), je me passionne pour le domaine de l'informatique et des technologies. Mon parcours me permet de développer des compétences solides en programmation, gestion de bases de données et conception de systèmes d'information.Grâce aux projets menés durant mes études, j'ai acquis une compréhension approfondie des outils et langages utilisés dans le secteur, tout en développant des solutions adaptées aux besoins des utilisateurs. Mon objectif est d'élargir mon expertise technique et de m'intégrer dans un environnement professionnel où je pourrai continuer à apprendre et à contribuer activement.</p>
                     </div>
                 </div>
             </div>
