--- a/veille technologique.html
+++ b/veille technologique.html
@@ -26,7 +26,7 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="header-logo">
+                    <a href="Hub.html" class="header-logo">
                         <img src="img/portfolio-logo.png">
                     </a>
                     <!-- Menu de navigation principal -->
@@ -101,12 +101,12 @@
                             Pour me permettre de rester à jour sur ma Veille Technologique j'ai mis en place des outils et des méthodes pour cela.  
                         </p>
                         <p style="margin-top: 40px;">
-                            La première methode que j'ai mis en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise.Sur OperaGX il la fontionalite des Pindboard qui me permet de stoker tout les sites,blog et/ou article que je trouverai.
-                            <img src="img/portfolio-logo.png">
+                            La première methode que j'ai mis en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise.Sur OperaGX il la fontionalite des Pindboard qui me permet de stoker tout les sites,blog et/ou article que je trouverai.<br><br>
+                            <img src="img/Pindboards.png" class="small-image">
                         </p>
                         <p style="margin-top: 40px;">
                             J’ai ensuite rajouté un autre système de veille , le « Google Alert » , c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
-                            <img src="img/Google-alert.png">
+                            <img src="img/Google-alert.png" class="small-image">
                         </p>
                     </div>
                 </div>
