--- a/SISR.html
+++ b/SISR.html
@@ -26,7 +26,7 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="header-logo">
+                    <a href="Hub.html" class="header-logo">
                         <img src="img/portfolio-logo.png">
                     </a>
                     <!-- Menu de navigation principal -->
