--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,7 +7,7 @@
         <!-- Configure l'affichage pour une bonne adaptation sur les écrans mobiles -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
-        <title>SLAM</title>
+        <title>Portfolio</title>
         <!-- icon de la page -->
         <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
@@ -34,7 +34,7 @@
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
                         <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#Competences">Compétences</a></li>
+                        <li><a href="#Portfolio">Portfolio</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -50,40 +50,22 @@
             </div>
         </div>
 
-        <!-- Section 'Compétences' avec cartes pour chaque compétence -->
-        <div id="Competences" class="section">
-             <div class="boxed text-center">
-                <h2>Mes compétences en SLAM</h2>
-                <div class="competences-cards">
-                    <div class="competence-card">
-                    <h3>Langages</h3>
-                    <p>HTML/CSS, PHP, bases de JAVA, Python et C.</p>
-                </div>
-                <div class="competence-card">
-                    <h3>Bases de données</h3>
-                    <p>SGBD, MySQL et langage SQL.</p>
-                </div>
-                <div class="competence-card">
-                    <h3>Conception SI</h3>
-                    <p>Méthode Merise.</p>
-                </div>
-                <div class="competence-card">
-                    <h3>Systèmes d'Exploitation</h3>
-                    <p>Windows, Linux. Client/Serveur, Domaine AD, DHCP, DNS.</p>
-                </div>
-                <div class="competence-card">
-                    <h3>Réseaux</h3>
-                    <p>TCP-IP, DHCP, HTTP, Modèle OSI.</p>
-                </div>
-                <div class="competence-card">
-                    <h3>Cybersécurité</h3>
-                    <p>RGPD, CNIL, 12 règles de sécurité pour PME.</p>
-                </div>
+        <!-- Section Portfolio avec texte -->
+        <div id="Portfolio" class="section">
+            <div class="boxed text-center">
+                <h2>Mon Portfolio</h2>
+                <div class="flex" style="justify-content: center">
+                    <div class="w60 wm100 portfolio-txt">
+                        <p class="text-center">
+                            Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation de ce portfolio alors que je n'avais pas d'expérience en développementen html,css et JavaScript.<br><br>
+                        </p>
+                        <p class="text-left">
+                            Pour commencer....
+                        </p>                              
+                    </div>
+                </div>                      
             </div>
         </div>
-    </div>
-
-
 
         <!-- Section de contact avec informations et icônes -->
         <div id="contact" class="section dark">
@@ -107,12 +89,15 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
         
         <div class="navigation-buttons">
             <button onclick="location.href='Hub.html'">Page 1</button>
+            <button onclick="location.href='Tableau-de-synthèse.html'">Page 2</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
     <script src="js/app.js"></script>  
 </html>
+
+<!-- https://portefolionicolasmoreira.wordpress.com/veille-ttechnologique/ -->
