--- a/Hub.html
+++ b/Hub.html
@@ -145,7 +145,7 @@
                 <h2>Mes réalisations</h2>
                 <div class="flex wrap gap20 space-between">
                     <div class="w32 wm47 realisations">                        
-                        <a href="/">
+                        <a href="Portfolio.html">
                             <img src="img/portfolio-logo.png">
                             <h3>Portfolio</h3>
                         </a>                                                                         
