--- a/veille technologique.html
+++ b/veille technologique.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Titre de la page -->
         <title>Veille technologique</title>
+        <!-- icon de la page -->
+        <link rel="shortcut icon" type="png" href="img/portfolio-logo-64.png" />
         <!-- Balise de description pour le SEO -->
         <meta type="description" content="Ceci est mon portfolio étudiant" />
         <!-- Lien vers la police Material Symbols pour les icônes -->
