--- a/SLAM.html
+++ b/SLAM.html
@@ -110,7 +110,8 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Page 1</button>
+            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='SISR.html'">SISR</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
