--- a/Tableau-de-synthèse.html
+++ b/Tableau-de-synthèse.html
@@ -56,7 +56,7 @@
                 <h2>Mon Tableau de synthèse</h2>
                 <div class="flex" style="justify-content: center">
                     <div >                        
-                        <img src="img/Tableau-de-synthèse.png">                                                                        
+                        <img src="img/Tableau-de-synthèse.jpg">                                                                        
                     </div>
                 </div>
             </div>
@@ -87,8 +87,8 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Page 1</button>
-            <button onclick="location.href='veille technologique.html'">Page 3</button>
+            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='veille technologique.html'">veille</button>
         </div>
         
     </body>
