--- a/veille technologique.html
+++ b/veille technologique.html
@@ -103,12 +103,13 @@
                             Pour me permettre de rester à jour sur ma Veille Technologique j'ai mis en place des outils et des méthodes pour cela.  
                         </p>
                         <p style="margin-top: 40px;">
-                            La première methode que j'ai mis en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise.Sur OperaGX il la fontionalite des Pindboard qui me permet de stoker tout les sites,blog et/ou article que je trouverai.<br><br>
+                            La première methode que j'ai mis en place est l'utilisation d'un Pindboard sur le navigateur que j'utilise. En effet sur OperaGX je peux utiliser cette fonctionnalités qui me permet de stoker tout les sites,blog et/ou article que je trouverai.<br><br>
                             <img src="img/Pindboards.png" class="small-image">
                         </p>
                         <p style="margin-top: 40px;">
                             J’ai ensuite rajouté un autre système de veille , le « Google Alert » , c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
-                            <img src="img/Google-alert.png" class="small-image">
+                            <img src="img/Google-alert.png" class="small-image"><br><br>
+                            Grace a Google alert je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.
                         </p>
                     </div>
                 </div>
@@ -137,7 +138,7 @@
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
                             <li>Trop d’informations , difficiles de tout lire et surtout trié (surtout avec Google Alert)</li>
-                            <li>Beaucoup d’informations se ressemblent et sont identiques</li>
+                            <li>Beaucoup d’informations se ressemblent et/ou sont identiques</li>
                         </ul>
                     </div>
                 </div>
@@ -169,8 +170,8 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Page 1</button>
-            <button onclick="location.href='Tableau-de-synthèse.html'">Page 2</button>
+            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='Tableau-de-synthèse.html'">Tableau de synthèse</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
