--- a/Portfolio.html
+++ b/Portfolio.html
@@ -92,8 +92,8 @@
         </div>
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Page 1</button>
-            <button onclick="location.href='Tableau-de-synthèse.html'">Page 2</button>
+            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='/'">Projet 2</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
