--- a/SISR.html
+++ b/SISR.html
@@ -114,7 +114,8 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Page 1</button>
+            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='SLAM.html'">SLAM</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
