--- a/SISR.html
+++ b/SISR.html
@@ -28,7 +28,7 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="Hub.html" class="header-logo">
+                    <a href="index.html" class="header-logo">
                         <img src="img/portfolio-logo.png">
                     </a>
                     <!-- Menu de navigation principal -->
@@ -114,7 +114,7 @@
         </div> 
         
         <div class="navigation-buttons">
-            <button onclick="location.href='Hub.html'">Hub</button>
+            <button onclick="location.href='index.html'">Hub</button>
             <button onclick="location.href='SLAM.html'">SLAM</button>
         </div>
         
