--- a/veille technologique.html
+++ b/veille technologique.html
@@ -109,7 +109,8 @@
                         <p style="margin-top: 40px;">
                             J’ai ensuite rajouté un autre système de veille , le « Google Alert » , c’est une alerte Google qui est un email envoyé par Google listant toutes les pages web qui ont mentionné le mot ou l’expression sur laquelle vous avez placé une alerte.<br><br>
                             <img src="img/Google-alert.png" class="small-image"><br><br>
-                            Grace a Google alert je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.
+                            Grace a Google alert je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.<br><br>
+                            Je metterai plus tard en place un flux RSS avec Feedly.
                         </p>
                     </div>
                 </div>
