--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <span class="material-symbols-outlined">menu</span>
                     </button>
                     <!-- Logo avec lien vers l'accueil -->
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="header-logo">
+                    <a href="#accueil" class="header-logo">
                         <img src="img/portfolio-logo.png">
                     </a>
                     <!-- Menu de navigation principal -->
