--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="flex" style="justify-content: center">
                     <div class="w25 wm100 veille veille-technologique">
                         <a href="veille technologique.html">
-                            <img src="img/veille-technologique-logo.png">
+                            <img src="img/IA.png">
                         </a>                                                 
                     </div>                   
                 </div>                      
