--- a/veille technologique.html
+++ b/veille technologique.html
@@ -75,7 +75,7 @@
                         <p>Les types de sources les plus utilisés sont :</p><br>
                         <ul style="padding-left: 80px;">
                             <li>Les sites d’actualités (par exemple pour l’informatique : Le Monde informatique ou Developpez.com, …)</li>
-                            <li>Les bases de dépôts de brevets gratuites: Espacenet, Patentscope, UPSTO, The Lens, EAPATIS.</li>
+                            <li>Les bases de dépôts de brevets gratuites.</li>
                             <li>Les communiqués de presse des fournisseurs et des éditeurs</li>
                             <li>Les sites spécialisés</li>
                             <li>Les blogs d’expert</li>
@@ -112,6 +112,23 @@
                             Grace a Google alert je vais pouvoir remplir mon Pindboard,c'est deux outils de veille ce complet a merveille.<br><br>
                             Je metterai plus tard en place un flux RSS grace a Feedly et je centraliserai les informations avec ce dernier aussi.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="color-band"></div>
+
+        <div id="veille-technologique" class="section">
+            <div class="boxed text-center">
+                <h2>Les Résulats Obtenue</h2>
+                <div class="flex" style="justify-content: center;">
+                    <div class="w60 wm100 veille-txt" style="text-align: left;">
+                        <ul style="padding-left: 80px;">
+                            Vous pouvez voir sur l'image si-dessous une partie des arcticles que google alert m'envoie bien que ici comme le tag est "IA" je vais devoir faire un trie manuel.
+                            Une fois se trie fait je metterai dans mon Pindboard le temps que je passe a Feedly qui sera plus optimal<br><br>
+                            <img src="img/Capture d’écran alerte n°1.png" class="small-image"><br><br>
+                        </ul>
                     </div>
                 </div>
             </div>
