--- a/Application-C.html
+++ b/Application-C.html
@@ -34,7 +34,7 @@
                     <!-- Menu de navigation principal -->
                     <ul class="header-menu">
                         <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#Portfolio">Portfolio</a></li>
+                        <li><a href="#Portfolio">Application C</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -53,11 +53,11 @@
         <!-- Section Portfolio avec texte -->
         <div id="Portfolio" class="section">
             <div class="boxed text-center">
-                <h2>Mon Portfolio</h2>
+                <h2>Mon Application calculatoire</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 portfolio-txt">
                         <p class="text-center">
-                            Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation de ce portfolio alors que je n'avais pas d'expérience en développementen html,css et JavaScript.<br><br>
+                            Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation d'une application calculatoire.<br><br>
                         </p>
                         <p class="text-left">
                             Pour commencer....
