--- a/Tableau-de-synthèse.html
+++ b/Tableau-de-synthèse.html
@@ -56,7 +56,7 @@
                 <h2>Mon Tableau de synthèse</h2>
                 <div class="flex" style="justify-content: center">
                     <div >                        
-                        <img src="img/Tableau-de-synthèse.jpg">                                                                        
+                        <img class="Tableau" src="img/Tableau-de-synthèse.jpg">                                                                        
                     </div>
                 </div>
             </div>
