--- a/Application-C.html
+++ b/Application-C.html
@@ -60,7 +60,7 @@
                             Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation d'une application calculatoire.<br><br>
                         </p>
                         <p class="text-left">
-                            Pour commencer....
+                            La réalisation de cette application a été fait en C.
                         </p>                              
                     </div>
                 </div>                      
