--- a/Application-C.html
+++ b/Application-C.html
@@ -93,7 +93,7 @@
         
         <div class="navigation-buttons">
             <button onclick="location.href='index.html'">Hub</button>
-            <button onclick="location.href='/'">Projet 2</button>
+            <button onclick="location.href='Portfolio.html'">Projet 1</button>
         </div>
         
     <!-- Inclusion du fichier JavaScript pour la logique de la page -->
