--- a/Tableau-de-synthèse.html
+++ b/Tableau-de-synthèse.html
@@ -57,7 +57,12 @@
                 <div class="flex" style="justify-content: center">
                     <div >                        
                         <img class="Tableau" src="img/Tableau-de-synthèse.jpg">                                                                        
-                    </div>
+                    </div>                    
+                </div>
+                <div>
+                    <p>Vous pouvez retrouver ici le lien de mon Tableau de synthèse :</p><br><br>
+                    <!-- Lien de téléchargement du CV avec classe de bouton stylisé -->
+                    <a href="Tableau-de-synthèse.pdf" class="download-button" download="Tableau-de-synthèse.pdf">Télécharger</a>
                 </div>
             </div>
         </div>
