--- a/veille technologique.html
+++ b/veille technologique.html
@@ -58,7 +58,7 @@
                     <div class="w60 wm100 veille-txt">
                         <p>
                             Selon <em>Steven C. Wheelwright</em> (ancien professeur émérite de l’université de Harvard) :<br>
-                            "La veille technologique est constituée par l’ensemble des techniques visant à organiser de façon systématique la collecte, l’analyse, la diffusion de l’exploitation des informations techniques utiles à la sauvegarde et à la croissance des entreprises”.<br><br>
+                            "La veille technologique est constituée par l’ensemble des techniques visant à organiser de façon systématique la collecte, l’analyse, la diffusion et l’exploitation des informations techniques utiles à la sauvegarde et à la croissance des entreprises”.<br><br>
                             La veille technologique se doit de prévenir et alerter tout responsable d’un changement, d’une nouveauté ou d’une innovation qu’elle soit technique ou scientifique.
                             Dès lors qu’elle peut modifier le paysage ou faire perdre / gagner un avantage économique, la veille devient critique et doit intervenir le plus tôt possible.
                         </p>                              
@@ -125,8 +125,8 @@
                 <div class="flex" style="justify-content: center;">
                     <div class="w60 wm100 veille-txt" style="text-align: left;">
                         <ul style="padding-left: 80px;">
-                            Vous pouvez voir sur l'image si-dessous une partie des arcticles que google alert m'envoie bien que ici comme le tag est "IA" je vais devoir faire un trie manuel.
-                            Une fois se trie fait je metterai dans mon Pindboard le temps que je passe a Feedly qui sera plus optimal<br><br>
+                            Vous pouvez voir sur l'image ci-dessous une partie des articles que Google Alert m'envoie. Bien que ici, comme le tag est "IA", je vais devoir faire un tri manuel.
+                            Une fois ce tri fait, je mettrai dans mon Pindboard.<br><br>
                             <img src="img/Capture d’écran alerte n°1.png" class="small-image"><br><br>
                         </ul>
                     </div>
