--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h2>A propos de moi</h2>                        
                     </div>
                     <div class="w60 wm100">
-                        <p>Étudiant en BTS Services Informatiques aux Organisations (SIO), je me passionne pour le domaine de l'informatique et des technologies. Mon parcours me permet de développer des compétences solides en programmation, gestion de bases de données et conception de systèmes d'information. Grâce aux projets qui naîtrons durant mes études, je vais acquérir une compréhension approfondie des outils et langages utilisés dans le secteur, tout en développant des solutions adaptées aux besoins des utilisateurs. Mon objectif est d'élargir mon expertise technique et de m'intégrer dans un environnement professionnel où je pourrai continuer à apprendre et à contribuer activement.</p>
+                        <p>Étudiant en BTS Services Informatiques aux Organisations (SIO), je me passionne pour le domaine de l'informatique et des technologies. Mon parcours me permet de développer des compétences solides en programmation, gestion de bases de données et conception de systèmes d'information. Grâce aux projets qui naîtront durant mes études, je vais acquérir une compréhension approfondie des outils et langages utilisés dans le secteur, tout en développant des solutions adaptées aux besoins des utilisateurs. Mon objectif est d'élargir mon expertise technique et de m'intégrer dans un environnement professionnel où je pourrai continuer à apprendre et à contribuer activement.</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
         <!-- Section 'Compétences' avec icônes et titres -->
         <div id="competences" class="section dark">
             <div class="boxed text-center">
-                <h2>Découvrez mes compétence</h2>
+                <h2>Découvrez mes compétences</h2>
                 <div class="flex toColumn gap20" style="justify-content: center">
                     <div class="w25 wm100 skill">
                         <a href="SLAM.html">
@@ -114,9 +114,9 @@
                             <img src="img/Tableau-de-synthèse-logo.png">
                         </a>                                                 
                     </div>                   
-                </div>                      
+                </div>
             </div>
-        </div>
+       </div>
 
         <!-- Section 'veille-technologique' avec icônes et titres -->
         <div id="veille-technologique" class="section dark">
@@ -177,7 +177,16 @@
                 </div>
             </div>
         </div>
-        
+
+        <div class="color-band"></div>
+
+        <!-- Section 'Tableau-de-synthèse' avec icônes et titres -->
+        <div id="Stage" class="section">
+            <div class="">
+                <h2>Découvrez mes Stages </h2>
+            </div>
+        </div>
+
         <!-- Section de contact avec informations et icônes -->
         <div id="contact" class="section dark">
             <div class="boxed text-center">
