--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><a href="#Tableau-de-synthèse">Tableau de synthèse</a></li>
                         <li><a href="#veille-technologique">Veille technologique</a></li>
                         <li><a href="#realisations">Réalisations</a></li>
+                        <li><a href="#Stage">Stages</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>                    
                 </div>
@@ -182,8 +183,22 @@
 
         <!-- Section 'Tableau-de-synthèse' avec icônes et titres -->
         <div id="Stage" class="section">
-            <div class="">
+            <div class="boxed text-center">
                 <h2>Découvrez mes Stages </h2>
+                <div class="flex wrap gap20 space-between">
+                    <div class="w32 wm47 realisations">
+                        <a href="legolas.html">
+                            <img src="/">
+                            <h3>Legolas</h3>
+                        </a>
+                    </div>
+                    <div class="w32 wm47 realisations">
+                        <a href="/">
+                            <img class="img" src="/">
+                            <h3>/</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
