created page stage

--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
             <div class="boxed text-center">
                 <h2>Découvrez mes Stages </h2>
                 <div class="flex wrap gap20 space-between">
-                    <div class="w32 wm47 realisations">
+                    <div class="w32 wm47 stage">
                         <a href="legolas.html">
-                            <img src="/">
+                            <img src="img/legolas.png">
                             <h3>Legolas</h3>
                         </a>
                     </div>
-                    <div class="w32 wm47 realisations">
+                    <div class="w32 wm47 stage">
                         <a href="/">
                             <img class="img" src="/">
                             <h3>/</h3>
