--- a/legolas.html
+++ b/legolas.html
@@ -53,19 +53,79 @@
         <!-- Section Portfolio avec texte -->
         <div id="Portfolio" class="section">
             <div class="boxed text-center">
-                <h2>Mon Portfolio</h2>
+                <h2>Mon Stage en Entreprise</h2>
                 <div class="flex" style="justify-content: center">
                     <div class="w60 wm100 portfolio-txt">
                         <p class="text-center">
-                            Vous pourrez decouvrir ici la rebrique dans la quelle je vais expliquer la réalisation de ce portfolio alors que je n'avais pas d'expérience en développementen html,css et JavaScript.<br><br>
+                            J’ai réalisé mon stage de BTS SIO au sein de <strong>Ekino</strong>, une société spécialisée dans
+                            la transformation digitale.
                         </p>
+
                         <p class="text-left">
-                            Pour commencer....
-                        </p>                              
+                            Durant cette période de <strong>5 semaines</strong>, j’ai travaillé sur la conception d’une application web
+                            permettant au CSE de l’entreprise de créer et gérer des événements.
+                        </p>
+
+                        <h3 class="text-left">Mes missions</h3>
+                        <ul class="text-left missions">
+                            <li><span class="material-symbols-outlined">code</span> Conception et mise en place du projet en Symfony / PHP </li>
+                            <li><span class="material-symbols-outlined">storage</span> Conception et administration des bases de données avec PostgreSQL</li>
+                            <li><span class="material-symbols-outlined">description</span> Rédaction de documentation technique</li>
+                        </ul>
+
+                        <h3 class="text-left">Compétences acquises</h3>
+                        <div class="competences-cards">
+                            <div class="competence-card-stage">
+                                <h3>Développement web</h3>
+                            </div>
+                            <div class="competence-card-stage">
+                                <h3>Gestion de bases de données</h3>
+                            </div>
+                            <div class="competence-card-stage">
+                                <h3>Travail en équipe</h3>
+                            </div>
+                            <div class="competence-card-stage">
+                                <h3>Gestion du temps</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>                      
+                </div>
             </div>
         </div>
+
+        <div class="color-band"></div>
+
+        <!-- Section Portfolio avec texte -->
+        <div id="Portfolio" class="section">
+            <div class="boxed text-center">
+                <h2>Le commencement</h2>
+                <div class="flex" style="justify-content: center">
+                    <div class="w60 wm100 portfolio-txt">
+                        <p class="text-left">
+                            Ce stage avait pour but de me faire réaliser un projet de <strong>A à Z</strong>, en partant de la <strong>conception</strong> jusqu'à la <strong>
+                            mise en production</strong>, en m'appuyant sur les nouvelles technologies telles que l'<strong>IA</strong>.
+                        </p>
+
+                        <p class="text-left">
+                            Avant même de commencer à coder, j'ai dû apprendre à réaliser tout le travail de <strong>conception</strong> et de <strong>planification</strong>
+                            d'un projet, en utilisant l'IA Cline qui m'a aidé à créer trois fichiers importants pour le projet :
+                        </p>
+                        <ul class="text-left missions">
+                            <li>Product Context</li>
+                            <img src="img/Product%20Context.png" alt="Product Context Diagram" style="max-width: 100%; height: auto; margin: 10px 0;">
+                            <li>Project Progress</li>
+                            <li>Technical Context</li>
+                        </ul>
+
+                        <p class="text-left">
+                            Ces documents permettent de définir clairement les <strong>objectifs</strong> et le <strong>contexte</strong> technique du projet,
+                            ce qui permet que lorsque l'on utilise une <strong>IA</strong> de lui donner ces fichiers pour quelles est tout le <strong>contexte</strong> d'un coup.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <!-- Section de contact avec informations et icônes -->
         <div id="contact" class="section dark">
